[package]
name = "rustdesk_crypto"
version = "0.1.0"
authors = ["open-trade <info@opentradesolutions.com>", "nvksv <nvksv@nvksv.ru>"]
edition = "2021"

[dependencies]
bytes = { version = "1.2", features = ["serde"] }
sodiumoxide = "0.2"
serde = { version = "1.0", features = ["derive"] }
base64 = { version = "0.13" }